# smartse-template

./: .gitignore  404.html  CMakeLists.txt  README.md  antora-playbook.yml  index.html  sitemap.xml
.github/workflows/: build.yml  ci.yml  docs.yml  test.yml
_/css/: custom.css
_/downloads/: downloads-manifest.json
doc/: CMakeLists.txt  antora.yml
doc/modules/ROOT/pages/: index.adoc
doc/modules/models/: nav.adoc
doc/modules/models/pages/: index.adoc
doc/modules/showcases/: nav.adoc
doc/modules/showcases/pages/: index.adoc  sc-001.adoc
doc/modules/usecases/: nav.adoc
doc/modules/usecases/pages/: index.adoc  uc-001.adoc
models/: CMakeLists.txt
models/modelica/: .gitkeep
models/simulink/: .gitkeep
models/ssp/: .gitkeep
models/sysml/: .gitkeep
smartse-cluster/: index.html
smartse-cluster/models/: index.html
smartse-cluster/showcases/: index.html  sc-001.html
smartse-cluster/usecases/: index.html  uc-001.html
src/: .gitkeep  CMakeLists.txt
supplemental-ui/css/: custom.css
supplemental-ui/downloads/: downloads-manifest.json
supplemental-ui/js/: downloads.js
supplemental-ui/partials/: footer-scripts.hbs  header-content.hbs
testing/: .gitkeep  CMakeLists.txt
