cmake_minimum_required(VERSION 3.20)

# ── Source artefact builds ────────────────────────────────────────────────────
# Each artefact lives in its own subdirectory.  Add a subdirectory entry for
# every artefact you want to build, for example:
#
#   add_subdirectory(my-artefact)
#
# The subdirectory must contain its own CMakeLists.txt.

message(STATUS "src: no artefact subdirectories configured yet")
