cmake_minimum_required(VERSION 3.20)

# ── Testing ───────────────────────────────────────────────────────────────────
# Add test cases and testing infrastructure here.
#
# CTest integration example:
#   enable_testing()
#   add_subdirectory(my-test-suite)
#
# Each test suite subdirectory should contain its own CMakeLists.txt that
# registers tests via add_test() or a testing framework such as GoogleTest.

enable_testing()

message(STATUS "testing: no test suites configured yet")
